--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,1 +1,8 @@
-<p>login works!</p>
+<h2>Login</h2>
+<form> 
+    <label for="username">Username:</label>
+    <input type="text" id="username" name="username" required>
+    <label for="password">Password:</label> 
+    <input type="password" id="password" name="password" required> 
+    <input type="submit" value="Login">
+</form>
