--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+form {
+    display: flex;
+    flex-direction: column;
+    max-width: 20em;
+}
