--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,5 @@
+<div class="auth-menu">
+    <a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">Login</a>
+    <a routerLink="/signup" routerLinkActive="active" ariaCurrentWhenActive="page">Signup</a>
+</div>
 <router-outlet />
