--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,7 @@
-<div class="auth-menu">
-    <a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">Login</a>
-    <a routerLink="/signup" routerLinkActive="active" ariaCurrentWhenActive="page">Signup</a>
-</div>
+<table class="auth-menu">
+    <tbody>
+        <td><a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">Login</a></td>
+        <td><a routerLink="/signup" routerLinkActive="active" ariaCurrentWhenActive="page">Signup</a></td>
+    </tbody>
+</table>
 <router-outlet />
