--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -5,14 +5,24 @@ form {
 }
 
 .auth-menu {
-    display: flex;
-    gap: 1em
+    border-spacing: 0;
+    border-radius: 2em;
+    border: 0.1em solid black;
 }
 
-.auth-menu a {
-    color: white;
-    background-color: blue;
-    padding: 0.3em;
-    border-radius: 0.2em;
-    text-decoration: none;
+
+.auth-menu td {
+    padding: 0; 
+    border-right: 0.1em solid black; 
+}
+.auth-menu td:last-child {
+    border-right: none;
+}
+.auth-menu td a {
+    display: block; 
+    text-decoration: none; 
+    width: 100%;
+    height: 100%;
+    padding: 0.5em;
+    box-sizing: border-box; 
 }
