--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -1,5 +1,5 @@
-<h2>Signup</h2>
-<form>
+<h2 class="auth-heading">Signup</h2>
+<form class="auth-form">
     <label for="username">Username:</label>
     <input type="text" id="username" name="username" required>
     <label for="email">Email:</label> <input type="email" id="email" name="email" required>
