updated signup component

--- a/frontend/src/app/user/signup/signup.component.html
+++ b/frontend/src/app/user/signup/signup.component.html
@@ -1,11 +1,26 @@
 <h2 class="auth-heading">Signup</h2>
-<form class="auth-form">
+<form [formGroup]="form" (ngSubmit)="signup()" class="auth-form">
     <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required>
-    <label for="email">Email:</label> <input type="email" id="email" name="email" required>
+    <input type="text" id="username" formControlName="username" required>
+    <div *ngIf="form.get('username')?.invalid && (form.get('username')?.dirty || form.get('username')?.touched)">
+        <div *ngIf="form.get('username')?.errors?.['required']">Username is required.</div>
+        <div *ngIf="form.get('username')?.errors?.['minlength']">Username must be at least 5 characters long.</div>
+    </div>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" formControlName="email" required>
+    <div *ngIf="form.get('email')?.invalid && (form.get('email')?.dirty || form.get('email')?.touched)">
+        <div *ngIf="form.get('email')?.errors?.['required']">Email is required.</div>
+        <div *ngIf="form.get('email')?.errors?.['email']">Email must be valid.</div>
+    </div>
+
     <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
+    <input type="password" id="password" formControlName="password" required>
     <label for="confirm-password">Confirm Password:</label>
-    <input type="password" id="confirm-password" name="confirm-password" required>
-    <input type="submit" value="Signup">
+    <input type="password" id="confirm-password" formControlName="rePassword" required>
+    <div *ngIf="passGroup?.errors?.['matchPasswordsValidator']">
+        Passwords must match.
+    </div>
+
+    <input type="submit" value="Signup" [disabled]="form.invalid">
 </form>
