--- a/frontend/src/app/core/auth-menu/auth-menu.component.html
+++ b/frontend/src/app/core/auth-menu/auth-menu.component.html
@@ -1,9 +1,9 @@
 <div class="auth-menu">
-    <table class="not-logged">
+    <table *ngIf="!isLoggedIn" class="not-logged">
         <td><a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">Login</a></td>
         <td><a routerLink="/signup" routerLinkActive="active" ariaCurrentWhenActive="page">Signup</a></td>
     </table>
-    <table class="logged">
+    <table *ngIf="isLoggedIn" class="logged">
         <td><a routerLink="/profile" routerLinkActive="active" ariaCurrentWhenActive="page">My Finance</a></td>
         <td><a routerLink="/logout" routerLinkActive="active" ariaCurrentWhenActive="page">Logout</a></td>
     </table>
