--- a/frontend/src/app/core/header/header.component.css
+++ b/frontend/src/app/core/header/header.component.css
@@ -2,6 +2,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
+    margin: 0.5em;
 }
 
 .header-title {
