--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-authenticate>
     <app-header />
-    <router-outlet />
+    <main>
+       <router-outlet /> 
+    </main>
     <app-footer />
 </app-authenticate>
