updated home css

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,2 +1,3 @@
-<h1 class="home-heading">Finance Tacker</h1>
-<h2>A financing web-app!</h2>
+<h1 class="home-heading">Finance Tracker</h1>
+<hr/>
+<h2 class="home-subheading">For all your financing needs!</h2>
