--- a/frontend/src/app/user/signup/signup.component.html
+++ b/frontend/src/app/user/signup/signup.component.html
@@ -1,5 +1,6 @@
 <h2 class="auth-heading">Signup</h2>
 <form [formGroup]="form" (ngSubmit)="signup()" class="auth-form">
+    <div *ngIf="errorMsg" class="invalid-input">{{ errorMsg }}</div>
     <label for="username">Username:</label>
     <input type="text" id="username" formControlName="username" required>
     <div *ngIf="form.get('username')?.invalid && (form.get('username')?.dirty || form.get('username')?.touched)">
