--- a/frontend/src/app/user/login/login.component.html
+++ b/frontend/src/app/user/login/login.component.html
@@ -1,5 +1,6 @@
 <h2 class="auth-heading">Login</h2>
 <form [formGroup]="form" (ngSubmit)="login()" class="auth-form">
+    <div *ngIf="errorMsg" class="invalid-input">{{ errorMsg }}</div>
     <label for="email">Email:</label>
     <input type="email" id="email" formControlName="email" required>
     <div *ngIf="form.get('email')?.invalid && (form.get('email')?.dirty || form.get('email')?.touched)">
