--- a/frontend/src/app/finance/add-transaction/add-transaction.component.html
+++ b/frontend/src/app/finance/add-transaction/add-transaction.component.html
@@ -1,8 +1,8 @@
-<form [formGroup]="form" (ngSubmit)="addTransaction()">
+<form class="add-transaction-form" [formGroup]="form" (ngSubmit)="addTransaction()">
 
   <!-- Amount Field -->
   <div>
-    <label for="amount">Amount</label>
+    <label for="amount">Amount in BGN</label>
     <input type="number" id="amount" formControlName="amount" />
     <div *ngIf="form.get('amount')?.touched && form.get('amount')?.invalid" class="error">
       Amount is required.
@@ -47,6 +47,6 @@
   </div>
 
   <!-- Submit Button -->
-  <button type="submit" [disabled]="form.invalid">Submit</button>
+  <button type="submit" [disabled]="form.invalid">Add Transaction</button>
 
 </form>
