--- a/frontend/src/app/user/login/login.component.html
+++ b/frontend/src/app/user/login/login.component.html
@@ -1,18 +1,18 @@
 <h2 class="auth-heading">Login</h2>
 <form [formGroup]="form" (ngSubmit)="login()" class="auth-form">
-    <div *ngIf="errorMsg" class="invalid-input">{{ errorMsg }}</div>
+    <div *ngIf="errorMsg" class="error">{{ errorMsg }}</div>
     <label for="email">Email:</label>
     <input type="email" id="email" formControlName="email" required>
     <div *ngIf="form.get('email')?.invalid && (form.get('email')?.dirty || form.get('email')?.touched)">
-        <div class="invalid-input" *ngIf="form.get('email')?.errors?.['required']">Email is required.</div>
-        <div class="invalid-input" *ngIf="form.get('email')?.errors?.['email']">Email must be valid.</div>
+        <div class="error" *ngIf="form.get('email')?.errors?.['required']">Email is required.</div>
+        <div class="error" *ngIf="form.get('email')?.errors?.['email']">Email must be valid.</div>
     </div>
 
     <label for="password">Password:</label>
     <input type="password" id="password" formControlName="password" required>
     <div *ngIf="form.get('password')?.invalid && (form.get('password')?.dirty || form.get('password')?.touched)">
-        <div class="invalid-input" *ngIf="form.get('password')?.errors?.['required']">Password is required.</div>
+        <div class="error" *ngIf="form.get('password')?.errors?.['required']">Password is required.</div>
     </div>
 
-    <input type="submit" value="Login" [disabled]="form.invalid">
+    <button type="submit" [disabled]="form.invalid">Login</button>
 </form>
