--- a/frontend/src/app/finance/transaction-list/transaction-list.component.html
+++ b/frontend/src/app/finance/transaction-list/transaction-list.component.html
@@ -1,1 +1,26 @@
-<p>transaction-list works!</p>
+<div class="transaction-list">
+    <h2>Transaction List</h2>
+
+    <div *ngIf="transactions && transactions.length === 0">
+        <p>No transactions available.</p>
+    </div>
+
+    <table *ngIf="transactions && transactions.length > 0">
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Category</th>
+                <th>Amount</th>
+                <th>Type</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let transaction of transactions">
+                <td>{{ transaction.date }}</td>
+                <td>{{ transaction.category }}</td>
+                <td>{{ transaction.amount }}</td>
+                <td>{{ transaction.type }}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
