fineshed transaction details

--- a/frontend/src/app/finance/transaction-details/transaction-details.component.html
+++ b/frontend/src/app/finance/transaction-details/transaction-details.component.html
@@ -1,1 +1,22 @@
-<p>transaction-details works!</p>
+<div class="transaction-details">
+    <div class="date">
+        <p>Date:</p>
+        <p>{{transaction.date}}</p>
+    </div>
+    <div class="category">
+        <p>Category:</p>
+        <p>{{transaction.category}}</p>
+    </div>
+    <div class="type">
+        <p>Type:</p>
+        <p>{{transaction.type}}</p>
+    </div>
+    <div class="amount">
+        <p>Amount:</p>
+        <p>{{transaction.amount}} BGN</p>
+    </div>
+        <div class="description">
+        <p>Description:</p>
+        <p>{{transaction.description}}</p>
+    </div>
+</div>
